--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     "@sap/xssec": "^3",
     "@types/node": "^20.14.2",
     "express": "^4",
+    "form-data": "^4.0.0",
     "helmet": "^7.1.0",
+    "js2xmlparser": "^5.0.0",
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.14",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@cap-js/sqlite": "^1",
